[metadata]
name = tonsdk
version = 1.0.14
description = Python SDK for TON
long_description = file: README.md
long_description_content_type = text/markdown
keywords = TON, TON SDK, TON utils, TON tools
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Adaptive Technologies
author = tonfactory.org
project_urls = 
    Github = https://github.com/tonfactory/tonsdk

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pynacl>=1.4.0
    bitarray==2.6.0

[options.packages.find]
exclude =
    examples*
    devtools*
    docs*
    tests*
    venv*
